src/objects/LeanData__Lead_Lead_Match__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Lead1_Id__c</fullName>
        <label>Lead1 Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead2_Id__c</fullName>
        <label>Lead2 Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Match_Type__c</fullName>
        <label>Match Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Request_Id__c</fullName>
        <label>Request Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lead Lead Match</label>
    <listViews>
        <fullName>LeanData__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lead Lead Match Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Lead Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>